--- a/src/components/layouts/section.scss
+++ b/src/components/layouts/section.scss
@@ -4,8 +4,6 @@
     height: 100%;
     z-index: 1;
 
-    overflow: hidden;
-
     a {
         position: relative;
         display: inline-block;
